--- a/css/styles.css
+++ b/css/styles.css
@@ -40,28 +40,26 @@ h4 {
     padding: 40px;
     background-color: #D8E1EC;
     /* border-radius: 15px; */
-    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3); */
     margin: 50px auto;
     overflow: visible; /* Позволяем элементам выходить за пределы контейнера */
 }
 
 /* Контейнер для левой и правой части */
+/* Контейнер для левой и правой части */
 .player-content {
     display: flex;
-    justify-content: space-between; /* Разделяем контент на левую и правую часть */
-    align-items: flex-end; /* Выравниваем контент сверху */
-    height: 100%; /* Полная высота родительского контейнера */
-
+    justify-content: flex-end;
+    align-items: flex-end; /* Измените на flex-start для выравнивания по верху */
+    height: 100%;
 }
 
 /* Левая часть */
 .left-section {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end; 
-    height: 100%; /* Полная высота родительского контейнера */
-    position: relative;
-    margin-top: 0px; /* Поднимает секцию вверх */
+    justify-content: flex-start;
+    width: calc(100% - 120px); /* Устанавливаем ширину левой секции */
     margin-left: 20px;
 }
 
@@ -93,19 +91,17 @@ h4 {
 /* Правая часть */
 .right-section {
     display: flex;
-    flex-shrink: 0;
-    flex-direction: column; /* Вертикальная колонка */
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 20%; /* Ширина правой секции */
-    height: 100%; /* Полная высота родительского контейнера */
+    width: 100px; /* Задаем фиксированную ширину для правой секции */
+    height: 100%;
 }
 
 /* Логотип наложенный сверху */
 .logo-overlay {
     position: absolute;
-    top: 0%; /* Сдвиг вверх, чтобы вывести логотип за пределы контейнера */
-    left: 0px; /* Сдвиг влево */
+    top: 5%; /* Сдвиг вверх, чтобы вывести логотип за пределы контейнера */
     width: 250px; /* Ширина логотипа */
     height: 250px;
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.6); /* Тень вокруг логотипа */
@@ -186,7 +182,7 @@ h4 {
     height: 200px; /* Фиксированная высота для пяти треков */
     display: flex;
     flex-direction: column;
-    justify-content: flex-end; 
+    justify-content: flex-start; 
 }
 
 .history-item {
