--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@ body {
     margin: 0;
     padding: 0;
     background-color: #D8E1EC; /* Устанавливаем цвет фона для всей страницы */
-    font-size: 150%; 
+    font-size: 150%;
+    overflow: hidden; /* Отключаем всю прокрутку */
 }
 
 /* Внешний контейнер, который растягивается на всю ширину устройства */
@@ -14,6 +15,7 @@ body {
     width: 100vw;            /* Занимаем всю ширину экрана */
     height: 100vh;           /* Занимаем всю высоту экрана */
     background-color: #D8E1EC; /* Цвет фона */
+    overflow: hidden;        /* Отключаем возможность прокрутки внутри внешнего контейнера */
 }
 
 @font-face {
@@ -102,8 +104,8 @@ h4 {
 .logo-overlay {
     position: absolute;
     top: 6%; /* Сдвиг вверх, чтобы вывести логотип за пределы контейнера */
-    width: 250px; /* Ширина логотипа */
-    height: 250px;
+    width: 240px; /* Ширина логотипа */
+    height: 240px;
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.6); /* Тень вокруг логотипа */
     border-radius: 7%; /* Закругленные углы для логотипа */
 }
