--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+html, body {
     height: 100%;
     margin: 0;
     padding: 0;
@@ -66,6 +66,11 @@ h4 {
     overflow: visible; /* Позволяем элементам выходить за пределы контейнера */
 }
 
+.player-container h4 {
+    font-size: large;
+}
+
+
 /* Контейнер для левой и правой части */
 /* Контейнер для левой и правой части */
 .player-content {
@@ -98,7 +103,7 @@ h4 {
     align-items: center; /* Вертикальное выравнивание */
     justify-content: flex-start; /* Прижимаем содержимое к левой части */
     gap: 10px; /* Промежуток между иконкой и ползунком */
-    margin-bottom: 20px; /* Отступ снизу для предотвращения перекрытия */
+    margin-bottom: 15px; /* Отступ снизу для предотвращения перекрытия */
 }
 
 .fa-volume-up {
@@ -119,7 +124,7 @@ h4 {
     height: 100%;
 }
 
-/* Логотип наложенный сверху */
+/* Логотип */
 .logo-overlay {
     position: absolute;
     top: 6%; /* Сдвиг вверх, чтобы вывести логотип за пределы контейнера */
