--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,7 @@ h4 {
     height: 70px; /* Высота контейнера */
     border-radius: 50%; /* Делаем контейнер круглым */
     overflow: hidden; /* Скрываем лишние части изображения */
-    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3); /* Тень вокруг круга */
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2); /* Тень вокруг круга */
 }
 
 .image-container img {
@@ -221,6 +221,7 @@ h4 {
     width: 45px;
     height: 45px;
     margin-right: 5px;
+    border-radius: 9%;
 }
 
 .history-info {
@@ -250,4 +251,9 @@ h4 {
 
 .telegram-link:hover .telegram-text {
     display: block;
+}
+
+.dark-mode {
+    background-color: #111;
+    color: #eee;
 }
