--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ h4 {
 /* Правая часть */
 .right-section {
     display: flex;
+    flex-shrink: 0;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -315,4 +316,5 @@ h4 {
 .in-telegram .volume-control {
     visibility: hidden;
     pointer-events: none;
+    min-height: 40px; /* Добавляем невидимый заполнитель */
 }
