fix fix fix  html  now playing in tg

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@ h4 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100px; /* Задаем фиксированную ширину для правой секции */
+    /* width: 100px; Задаем фиксированную ширину для правой секции */
     height: 100%;
     margin-left: 10px;
 }
