--- a/css/styles.css
+++ b/css/styles.css
@@ -29,12 +29,12 @@ html {
 /* Внешний контейнер, который растягивается на всю ширину устройства */
 .outer-container {
     display: flex;
-    justify-content: center; /* Центрирование по горизонтали */
-    align-items: center; /* Центрирование по вертикали */
-    width: 100vw;            /* Занимаем всю ширину экрана */
-    height: 100vh;           /* Занимаем всю высоту экрана */
-    background-color: #D8E1EC; /* Цвет фона */
-    overflow: hidden;        /* Отключаем возможность прокрутки внутри внешнего контейнера */
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100vw;
+    min-height: 100vh;
+    overflow-x: hidden;
 }
 
 @font-face {
@@ -56,7 +56,7 @@ h4 {
 /* Основной контейнер плеера */
 .player-container {
     position: relative;
-    width: 400px;
+    width: 350px;
     height: 650px; /* Общая высота плеера */
     padding: 40px;
     background-color: #D8E1EC;
@@ -89,26 +89,7 @@ h4 {
     font-size: 23px;
     font-weight: bold;
     color: #333;
-    margin-bottom: 20px; /* Добавлен отступ снизу */
-}
-
-/* Контрол громкости */
-.volume-control {
-    min-width: 250px;
-    display: flex;
-    align-items: center; /* Вертикальное выравнивание */
-    justify-content: flex-start; /* Прижимаем содержимое к левой части */
-    gap: 10px; /* Промежуток между иконкой и ползунком */
-    margin-bottom: 15px; /* Отступ снизу для предотвращения перекрытия */
-}
-
-.fa-volume-up {
-    transform: scale(0.60);
-    opacity: 0.6;
-}
-
-#volume-slider {
-    width: 200px; 
+    
 }
 
 /* Правая часть */
@@ -126,10 +107,10 @@ h4 {
 /* Логотип */
 .logo-overlay {
     position: absolute;
-    top: 6%;
-    width: 240px; /* Ширина логотипа */
-    height: 240px;
-    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.6); /* Тень вокруг логотипа */
+    top: 8%;
+    width: 260px; /* Ширина логотипа */
+    height: 260px;
+    box-shadow: 0px 10px 30px rgba(0, 4, 0, 0.6); /* Тень вокруг логотипа */
     border-radius: 7%; /* Закругленные углы для логотипа */
 }
 
@@ -145,11 +126,12 @@ h4 {
 }
 
 .image-container {
-    width: 70px; /* Ширина контейнера */
-    height: 70px; /* Высота контейнера */
+    width: 60px; /* Ширина контейнера */
+    height: 60px; /* Высота контейнера */
     border-radius: 50%; /* Делаем контейнер круглым */
     overflow: hidden; /* Скрываем лишние части изображения */
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2); /* Тень вокруг круга */
+    margin-top: 45px;
 }
 
 .image-container img {
@@ -184,7 +166,7 @@ h4 {
     display: flex;
     flex-direction: column; /* Отображаем иконки в столбик */
     justify-content: center;
-    margin-top: -390px;
+    margin-top: -345px;
 }
 
 .social-icons a {
@@ -254,86 +236,71 @@ h4 {
     display: block;
 }
 
-/* Темная тема Telegram */
-
-.dark-mode .outer-container {
+.outer-container,
+.player-container {
     background-color: #2a2f3a !important;
 }
 
-.dark-mode .player-container {
-    background-color: #2a2f3a !important;
-}
-
-.dark-mode .left-section h1,
-.dark-mode .player-container h4,
-.dark-mode #song-info,
-.dark-mode .history-info,
-.dark-mode .track-info,
-.dark-mode .telegram-text {
-    color: #cccccc !important;
-}
-.dark-mode #song-info {
+.left-section h1,
+.player-container h4,
+#song-info,
+.history-info,
+.track-info,
+.telegram-text {
     color: #cccccc !important;
 }
 
-.dark-mode .volume-control i,
-.dark-mode .social-icons a {
+.volume-control i,
+.social-icons a {
     opacity: 0.6;
 }
 
-.dark-mode .history-thumbnail {
+.history-thumbnail {
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
 }
 
-.dark-mode .social-icons img:hover {
+.social-icons img:hover {
     transform: scale(1.1);
-    filter: brightness(1.8) invert(1)
+    filter: brightness(1.8) invert(1);
 }
 
-.dark-mode .telegram-text {
+.telegram-text {
     background-color: #222;
     padding: 5px 10px;
     border-radius: 5px;
 }
 
-.dark-mode .social-icons img,
-.dark-mode .logo-overlay img {
+.social-icons img,
+.logo-overlay img {
     filter: brightness(1.8) invert(1);
 }
 
-.dark-mode .fa.fa-volume-up {
+.fa.fa-volume-up {
     color: #cccccc !important;
     opacity: 1 !important;
 }
 
-.dark-mode .play-btn img {
+.play-btn img {
     opacity: 0.6;
     filter: brightness(1.2);
 }
 
 
-.volume-label {
-    margin-right: 10px;
-    font-weight: bold;
-}
 
-.in-telegram .fa.fa-volume-up,
-.in-telegram #volume-slider {
-    display: none;
-}
+@media (max-width: 420px) {
+    .player-container {
+        padding: 10px;
+    }
 
-.in-telegram .volume-label {
-    display: inline;
-}
+    .left-section h1 {
+        font-size: 18px;
+    }
 
-:not(.in-telegram) .volume-label {
-    display: none;
-}
+    .history-info {
+        font-size: 14px;
+    }
 
-.in-telegram .volume-control {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    min-height: 40px;
-    min-width: 250px;
+    .track-info {
+        max-width: 230px;
+    }
 }
