--- a/css/styles.css
+++ b/css/styles.css
@@ -293,10 +293,7 @@ h4 {
     }
 
     .left-section h1 {
-        .left-section h1 {
-            font-size: 18px;
-            margin-top: 220px; /* чтобы не налезал на логотип */
-        }
+        font-size: 18px;
     }
 
     .history-info {
@@ -306,4 +303,10 @@ h4 {
     .track-info {
         max-width: 230px;
     }
+}
+
+.left-section::before {
+    content: "";
+    display: block;
+    height: 220px; /* Отступ под логотип */
 }
