--- a/css/styles.css
+++ b/css/styles.css
@@ -431,7 +431,7 @@ h4 {
 .marquee {
     display: inline-block;
     white-space: nowrap;
-    animation: marquee 12s linear infinite;
+    animation: marquee 12s linear infinite alternate;
 }
 
 /* Ключевые кадры для анимации */
@@ -442,4 +442,21 @@ h4 {
     100% {
         transform: translateX(-100%);
     }
+}
+
+#wine-emoji {
+  display: inline-block;
+  animation: wine-pulse 3s ease-in-out infinite;
+}
+
+@keyframes wine-pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.15);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
